# awecount

./: .env.example  .env.example.docker-compose  .env.example.local  .gitignore  Caddyfile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml
server/django/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SeparatedValuesField  ageing_report.xlsx  appmigrate.sh  deploy.sh  entrypoint.sh  freeze.txt  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  sonar-project.properties  temp..pgsql  temp.py
server/django/apps/aggregator/: admin.py  api.py  apps.py  base_widgets.py  export.py  models.py  resources.py  serializers.py  urls.py  views.py  widgets.py
server/django/apps/aggregator/migrations/: 0001_initial.py  0002_auto_20190913_2354.py  0003_auto_20190914_0416.py  0004_auto_20190914_0447.py  0005_auto_20190914_1655.py  0006_widget_group_by.py  0007_widget_is_active.py  0008_auto_20190915_1539.py  0009_auto_20190915_1555.py  0010_auto_20190915_2331.py  (+3 more)
server/django/apps/api/: admin.py  authentication.py  crypto.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/django/apps/authentication/: adapters.py  urls.py  views.py
server/django/apps/bank/: admin.py  api.py  filters.py  models.py  resources.py  serializers.py  urls.py
server/django/apps/company/: apps.py  constants.py  helpers.py  middleware.py  models.py  permissions.py  serializers.py  signals.py  tasks.py  urls.py  views.py
server/django/apps/ledger/: admin.py  api.py  filters.py  models.py  resources.py  serializers.py  urls.py
server/django/apps/product/: admin.py  api.py  filters.py  helpers.py  models.py  serializers.py  urls.py  validators.py  views.py
server/django/apps/quotation/: base_models.py  filters.py  models.py  serializers.py  urls.py
server/django/apps/report/: api.py  resources.py  urls.py
server/django/apps/tax/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py
server/django/apps/users/: admin.py  authentication.py  middleware.py  models.py  permission_modules.py  permissions.py  serializers.py  urls.py  views.py
server/django/apps/voucher/: admin.py  api.py  apps.py  base_models.py  fifo_functions.py  filters.py  models.py  resources.py  serializers.py  urls.py  views.py
server/django/awecount/: asgi.py  settings.py  urls.py  wsgi.py
server/django/awecount/libs/: Base64FileField.py  CustomViewSet.py  JWTCustomAuthentication.py  __init__.py  db.py  drf_fields.py  exception.py  fields.py  helpers.py  mixins.py  nepdate.py  pagination.py  resources.py  serializers.py
server/django/awecount/settings/: __init__.py  base.py  cbms_nepal.py  dev.py  env.example.py  env.sample.py
server/django/awecount/utils/: Base64FileField.py  CustomViewSet.py  JWTCustomAuthentication.py  __init__.py  helpers.py  mixins.py  nepdate.py  serializers.py
server/django/awecounting/: urls.py  wsgi.py
server/django/awecounting/libs/: drf_fields.py  fields.py  mixins.py
server/django/awecounting/settings/: base.py  dev.py  prod.py  test.py
server/django/docs/: journal-voucher-api.md  rbac.md
server/django/lib/: string.py
server/django/lib/drf/: serializers.py
server/django/lib/models/: base.py  mixins.py
server/django/lib/sentry/: middleware.py
server/django/requirements/: base.txt  dev.txt  frozen.txt  prod.txt
server/django/test/: test_transaction_fee_config.py
server/django/test_app/: api.py  data.py
(+1355 files in other folders)
