[project]
name = "awecount"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "django >= 4.2, < 4.3",
    "dj-database-url>=2.2.0",
    "django-allauth[mfa,socialaccount]>=65.3.0",
    "django-auditlog>=3.0.0",
    "django-cors-headers>=4.5.0",
    "django-crum>=0.7.9",
    "django-dbbackup>=4.2.1",
    "django-extensions>=3.2.3",
    "django-filter>=24.3",
    "django-import-export>=4.1.1",
    "django-mptt>=0.16.0",
    "django-q2[sentry]>=1.7.2",
    "django-redis>=5.4.0",
    "django-ses>=4.1.1",                         # Remove this once migrated to SMTP
    "django-storages[s3]>=1.14.4",
    "django-xhtml2pdf>=0.0.4",                   # Remove this once migrated to WeasyPrint
    "djangorestframework-jwt>=1.0.1",            # Remove this once migrated to Django-Allauth
    "djangorestframework-simplejwt>=5.3.1",
    "djangorestframework>=3.15.2",
    "djoser>=2.3.1",                             # Remove this once migrated to Django-Allauth
    "gunicorn>=23.0.0",
    "num2words>=0.5.13",
    "openpyxl==3.0.10",
    "pillow>=10.4.0",
    "psycopg[binary]>=3.2.3",
    "python-dotenv>=1.0.1",
    "sentry-sdk>=2.14.0",
    "setuptools>=75.1.0",
    "thefuzz>=0.22.1",
    "weasyprint>=62.3",
    "whitenoise>=6.8.2",
    "xhtml2pdf>=0.2.16",                         # Remove this once migrated to WeasyPrint
    "xlsxwriter>=3.2.0",                         # Remove this once migrated to Openpyxl
]

[tool.ruff]
exclude = [
    "migrations", #TODO: whether or not to format migrations, as fomratting migrations will need commit hooks
]

[tool.uv]
index-url = "https://pypi.python.org/simple/"
dev-dependencies = [
    "django-debug-toolbar>=4.4.6",
    "ipdb>=0.13.13",
    "ruff>=0.6.7",
]
