[project]
name = "awecount"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "django >= 4.2, < 4.3",
    "dj-database-url>=2.2.0",
    "django-allauth[mfa,socialaccount]>=65.7.0",
    "django-auditlog>=3.1.2",
    "django-cors-headers>=4.7.0",
    "django-crum>=0.7.9",
    "django-dbbackup>=4.2.1",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-import-export>=4.3.7",
    "django-mptt>=0.17.0",
    "django-q2[sentry]>=1.8.0",
    "django-redis>=5.4.0",
    "django-ses>=4.4.0",                         # Remove this once migrated to SMTP
    "django-storages[s3]>=1.14.6",
    "django-xhtml2pdf>=0.0.4",                   # Remove this once migrated to WeasyPrint
    "djangorestframework-simplejwt>=5.5.0",
    "djangorestframework>=3.16.0",
    "gunicorn>=23.0.0",
    "num2words>=0.5.14",
    "openpyxl==3.0.10",
    "pillow>=11.2.1",
    "psycopg[binary]>=3.2.6",
    "python-dotenv>=1.1.0",
    "sentry-sdk[django]>=2.27.0",
    "setuptools>=80.0.0",
    "thefuzz>=0.22.1",
    "weasyprint>=65.1",
    "whitenoise>=6.9.0",
    "xhtml2pdf>=0.2.17",                         # Remove this once migrated to WeasyPrint
    "xlsxwriter>=3.2.3",                         # Remove this once migrated to Openpyxl
    "uvicorn>=0.34.2",
]

[tool.ruff]
exclude = [
    "migrations", #TODO: whether or not to format migrations, as fomratting migrations will need commit hooks
]

[tool.uv]
index-url = "https://pypi.python.org/simple/"
dev-dependencies = [
    "django-debug-toolbar>=4.4.6",
    "ipdb>=0.13.13",
    "ruff>=0.6.7",
]
